--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #262626;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #cbcbcb;
+  border-radius: 4px;
+}
